--- a/test.html
+++ b/test.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-    <div id='nav'></div>
-    <div id='content'></div>
-    <div id='footer'></div>
+    <div id='root'></div>
 </body>
 
 <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
@@ -19,47 +17,104 @@
 
 <script type="text/babel">
 
-    const navArray = [
-        {name: 'About', id: 'about'}, 
-        {name: 'Main', id: 'main'},
-        {name: 'Our team', id: 'team'},
-        {name: 'Our partners', id: 'partners'},
-        {name: 'Contacts', id: 'contacts'},
+  class NavBar extends React.Component {
+    
+    navArray = [
+      {name: 'About', id: 'about'}, 
+      {name: 'Main', id: 'main'},
+      {name: 'Our team', id: 'team'},
+      {name: 'Our partners', id: 'partners'},
+      {name: 'Contacts', id: 'contacts'},
+      {name: 'Sign in', id: 'authorize'}
     ]
 
-    const contentArray = [
-        {header: 'About us:', content: 'Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci omnis accusamus aliquam exercitationem soluta cum molestiae laboriosam corporis, inventore repellat at quibusdam nostrum commodi nihil temporibus aliquid accusantium molestias? Accusantium reiciendis nulla a officiis quis laudantium cumque dolorem id, quos voluptas modi expedita veritatis aliquam deleniti voluptatum, cum numquam ut?', id:'about'},
-        {header: 'The main information:',
-        content: 'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates soluta quisquam quaerat, tempore, ullam dicta nostrum animi molestiae fuga libero alias voluptate obcaecati, reprehenderit unde id autem sunt nesciunt eos repellat accusantium ducimus! Aut repellendus explicabo odit ab, dolores maxime veritatis deserunt dolore magnam unde consequatur illum impedit asperiores hic at tempora aliquid, assumenda vel nulla quibusdam expedita quisquam soluta cupiditate enim! Unde dolore cum quae. Enim eos quo iste magnam harum libero doloremque maxime amet? Quibusdam minus unde quas ad ullam, itaque, hic amet adipisci perspiciatis labore qui! Sint, officia enim similique facilis cum perferendis doloribus veniam, et dicta placeat minus vitae nisi ut, laboriosam repellendus. Voluptas recusandae voluptatem corporis a, pariatur ad est? Ea incidunt aliquam ad vero repudiandae fugiat assumenda, saepe sit magnam voluptates sunt facilis obcaecati maxime dolorem ullam perferendis error harum alias quisquam tenetur amet exercitationem vitae. Quisquam earum quia voluptatem aliquam, ipsa fugit vitae!',
-        id:'main'},
-        {header: 'Our team:',
-        content: 'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates soluta quisquam quaerat, tempore, ullam dicta nostrum animi molestiae fuga libero alias voluptate obcaecati, reprehenderit unde id autem sunt nesciunt eos repellat accusantium ducimus! Aut repellendus explicabo odit ab, dolores maxime veritatis deserunt dolore magnam unde consequatur illum impedit asperiores hic at tempora aliquid, assumenda vel nulla quibusdam expedita quisquam soluta cupiditate enim! Unde dolore cum quae. Enim eos quo iste magnam harum libero doloremque maxime amet? Quibusdam minus unde quas ad ullam, itaque, hic amet adipisci perspiciatis labore qui! Sint, officia enim similique facilis cum perferendis doloribus veniam, et dicta placeat minus vitae nisi ut, laboriosam repellendus. Voluptas recusandae voluptatem corporis a, pariatur ad est? Ea incidunt aliquam ad vero repudiandae fugiat assumenda, saepe sit magnam voluptates sunt facilis obcaecati maxime dolorem ullam perferendis error harum alias quisquam tenetur amet exercitationem vitae. Quisquam earum quia voluptatem aliquam, ipsa fugit vitae!',
-        id:'team'},
-        {header: 'Our partners:',
-        content: 'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates soluta quisquam quaerat, tempore, ullam dicta nostrum animi molestiae fuga libero alias voluptate obcaecati, reprehenderit unde id autem sunt nesciunt eos repellat accusantium ducimus! Aut repellendus explicabo odit ab, dolores maxime veritatis deserunt dolore magnam unde consequatur illum impedit asperiores hic at tempora aliquid, assumenda vel nulla quibusdam expedita quisquam soluta cupiditate enim! Unde dolore cum quae. Enim eos quo iste magnam harum libero doloremque maxime amet? Quibusdam minus unde quas ad ullam, itaque, hic amet adipisci perspiciatis labore qui! Sint, officia enim similique facilis cum perferendis doloribus veniam, et dicta placeat minus vitae nisi ut, laboriosam repellendus. Voluptas recusandae voluptatem corporis a, pariatur ad est? Ea incidunt aliquam ad vero repudiandae fugiat assumenda, saepe sit magnam voluptates sunt facilis obcaecati maxime dolorem ullam perferendis error harum alias quisquam tenetur amet exercitationem vitae. Quisquam earum quia voluptatem aliquam, ipsa fugit vitae!',
-        id:'partners'},
+    render() {
+      return <div className = "nav">
+          { this.navArray.map ( (i, n) => <a href = {'#' + i.id} key = {'nav' + n} > {i.name} </a> )}
+        </div>
+    }
+  }
+
+  class MainContent extends React.Component {
+
+    contentArray = [
+      {header: 'About us:', content: 'Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci omnis accusamus aliquam exercitationem soluta cum molestiae laboriosam corporis, inventore repellat at quibusdam nostrum commodi nihil temporibus aliquid accusantium molestias? Accusantium reiciendis nulla a officiis quis laudantium cumque dolorem id, quos voluptas modi expedita veritatis aliquam deleniti voluptatum, cum numquam ut?', id:'about'},
+      {header: 'The main information:',
+      content: 'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates soluta quisquam quaerat, tempore, ullam dicta nostrum animi molestiae fuga libero alias voluptate obcaecati, reprehenderit unde id autem sunt nesciunt eos repellat accusantium ducimus! Aut repellendus explicabo odit ab, dolores maxime veritatis deserunt dolore magnam unde consequatur illum impedit asperiores hic at tempora aliquid, assumenda vel nulla quibusdam expedita quisquam soluta cupiditate enim! Unde dolore cum quae. Enim eos quo iste magnam harum libero doloremque maxime amet? Quibusdam minus unde quas ad ullam, itaque, hic amet adipisci perspiciatis labore qui! Sint, officia enim similique facilis cum perferendis doloribus veniam, et dicta placeat minus vitae nisi ut, laboriosam repellendus. Voluptas recusandae voluptatem corporis a, pariatur ad est? Ea incidunt aliquam ad vero repudiandae fugiat assumenda, saepe sit magnam voluptates sunt facilis obcaecati maxime dolorem ullam perferendis error harum alias quisquam tenetur amet exercitationem vitae. Quisquam earum quia voluptatem aliquam, ipsa fugit vitae!',
+      id:'main'},
+      {header: 'Our team:',
+      content: 'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates soluta quisquam quaerat, tempore, ullam dicta nostrum animi molestiae fuga libero alias voluptate obcaecati, reprehenderit unde id autem sunt nesciunt eos repellat accusantium ducimus! Aut repellendus explicabo odit ab, dolores maxime veritatis deserunt dolore magnam unde consequatur illum impedit asperiores hic at tempora aliquid, assumenda vel nulla quibusdam expedita quisquam soluta cupiditate enim! Unde dolore cum quae. Enim eos quo iste magnam harum libero doloremque maxime amet? Quibusdam minus unde quas ad ullam, itaque, hic amet adipisci perspiciatis labore qui! Sint, officia enim similique facilis cum perferendis doloribus veniam, et dicta placeat minus vitae nisi ut, laboriosam repellendus. Voluptas recusandae voluptatem corporis a, pariatur ad est? Ea incidunt aliquam ad vero repudiandae fugiat assumenda, saepe sit magnam voluptates sunt facilis obcaecati maxime dolorem ullam perferendis error harum alias quisquam tenetur amet exercitationem vitae. Quisquam earum quia voluptatem aliquam, ipsa fugit vitae!',
+      id:'team'},
+      {header: 'Our partners:',
+      content: 'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates soluta quisquam quaerat, tempore, ullam dicta nostrum animi molestiae fuga libero alias voluptate obcaecati, reprehenderit unde id autem sunt nesciunt eos repellat accusantium ducimus! Aut repellendus explicabo odit ab, dolores maxime veritatis deserunt dolore magnam unde consequatur illum impedit asperiores hic at tempora aliquid, assumenda vel nulla quibusdam expedita quisquam soluta cupiditate enim! Unde dolore cum quae. Enim eos quo iste magnam harum libero doloremque maxime amet? Quibusdam minus unde quas ad ullam, itaque, hic amet adipisci perspiciatis labore qui! Sint, officia enim similique facilis cum perferendis doloribus veniam, et dicta placeat minus vitae nisi ut, laboriosam repellendus. Voluptas recusandae voluptatem corporis a, pariatur ad est? Ea incidunt aliquam ad vero repudiandae fugiat assumenda, saepe sit magnam voluptates sunt facilis obcaecati maxime dolorem ullam perferendis error harum alias quisquam tenetur amet exercitationem vitae. Quisquam earum quia voluptatem aliquam, ipsa fugit vitae!',
+      id:'partners'},
     ]
 
-        const nav = navArray.map((i)=><a href = {'#'+i.id}> {i.name}</a>);
+    render () {
+      return this.contentArray.map((i, n)=> 
+      <div className="section" key = {'section' + n}>
+          <h2 className="section-header" id={i.id} key = {'section-header' + n}>
+              {i.header}
+          </h2>
+          <p className="section-content" key = {'section-content' + n}>
+              {i.content}
+          </p>
+      </div>)
+    }
+  }
 
-        const content = contentArray.map((i)=> 
-        <div className="chapter">
-            <h2 className="chapter-header" id={i.id}>
-                {i.header}
-            </h2>
-            <p className="chapter-content">
-                {i.content}
-            </p>
-        </div>);
+  class Authorization extends React.Component {
 
-    ReactDOM.render (
-        nav,
-        document.getElementById('nav')
-    );
+    getAuthorizedUserName () {
+      let user; // here must be real code for getting user name
+      // user = 'User Name'; 
+      return user;
+    }
+    
+    render () {
+      let formContent = '';
+      if (this.getAuthorizedUserName ()) {
+        formContent = <button> Sign out </button>
+      };
+      formContent = <label>
+        <input type="text" placeholder="Your name:"/>
+        <input type="password" placeholder="Password:"/>
+        <button>Sign in</button>
+      </label>
+      return <form name = "authorization" className="form-authorization" id="authorize">
+        {formContent}
+        </form>
+    }
+  }
+
+  class Contacts extends React.Component {
+    render () {
+      return <div className="footer" id="contacts">
+        <h2>Contact us:</h2>
+        <ul>
+          <li>+38 050 555 55 55</li>
+          <li>email: asd@asdf.com</li>
+        </ul>
+        </div>
+    }
+  }
+
+const content = 
+    <div className="content">
+
+      <NavBar/>
+
+      <MainContent/>
+
+      <Authorization/>
+
+      <Contacts/>
+
+    </div>
 
     ReactDOM.render (
         content,
-        document.getElementById('content')
+        document.querySelector('#root')
     );
 
 </script>
